# vectorless_rag_local

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  pageindex.json  pyproject.toml  requirements.txt
core/: agent.py  indexer.py  llm.py  loader.py  models.py  rag.py  retriever.py
