[project]
name = "vectorless-agent"
version = "0.1.0"
description = "Vectorless RAG Agent powered by PageIndex, Ollama and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "ollama>=0.2.0",
    "pypdf2>=3.0.0",
    "pydantic>=2.0.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]